--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.5",
     "del": "^3.0.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
@@ -18,6 +19,7 @@
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
     "postcss-reporter": "^5.0.0",
     "postcss-scss": "^1.0.6",
     "stylelint": "^9.3.0"
